scrollbar fix

--- a/css/fullcontact.css
+++ b/css/fullcontact.css
@@ -203,9 +203,3 @@ nav button:hover {
         font-size: 0.8rem;
     }
 }
-
-/* Hide scrollbar */
-
-::-webkit-scrollbar {
-    display: none;
-}
